// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getOccurrecesRelevantForMonth should parse cron expressions correctly for case DST in Europe/Madrid with 0 1-5 30 3 * 1`] = `
[
  "2025-03-30T01:00:00.000+01:00",
  "2025-03-30T03:00:00.000+02:00",
  "2025-03-30T04:00:00.000+02:00",
  "2025-03-30T05:00:00.000+02:00",
]
`;

exports[`getOccurrecesRelevantForMonth should parse cron expressions correctly for case DST in Europe/Madrid with 0 2 30 3 * 1`] = `
[
  "2025-03-30T03:00:00.000+02:00",
]
`;

exports[`getOccurrecesRelevantForMonth should parse cron expressions correctly for case DST in Europe/Madrid with 30 2 30 3 * 1`] = `
[
  "2025-03-30T03:30:00.000+02:00",
]
`;

exports[`getOccurrecesRelevantForMonth should parse cron expressions correctly for case DST in Europe/Madrid with 30 3 30 3 * 1`] = `
[
  "2025-03-30T03:30:00.000+02:00",
]
`;

exports[`getOccurrecesRelevantForMonth should parse cron expressions correctly for case DST in Europe/Madrid with 30 3 30 3 * 2`] = `
[
  "2025-03-30T03:30:00.000+02:00",
]
`;

exports[`getOccurrecesRelevantForMonth should parse cron expressions correctly for case DST in UTC with 0 1-5 30 3 * 1`] = `
[
  "2025-03-30T01:00:00.000Z",
  "2025-03-30T02:00:00.000Z",
  "2025-03-30T03:00:00.000Z",
  "2025-03-30T04:00:00.000Z",
  "2025-03-30T05:00:00.000Z",
]
`;

exports[`getOccurrecesRelevantForMonth should parse cron expressions correctly for case DST in UTC with 0 2 30 3 * 1`] = `
[
  "2025-03-30T02:00:00.000Z",
]
`;

exports[`getOccurrecesRelevantForMonth should parse cron expressions correctly for case DST in UTC with 0 3 30 3 * 1`] = `
[
  "2025-03-30T03:00:00.000Z",
]
`;

exports[`getOccurrecesRelevantForMonth should parse cron expressions correctly for case DST in UTC with 30 2 30 3 * 1`] = `
[
  "2025-03-30T02:30:00.000Z",
]
`;

exports[`getOccurrecesRelevantForMonth should parse cron expressions correctly for case DST in UTC with 30 3 30 3 * 1`] = `
[
  "2025-03-30T03:30:00.000Z",
]
`;

exports[`getOccurrecesRelevantForMonth should parse cron expressions correctly for case Edges in UTC with 0 0 1 3 * 1`] = `
[
  "2025-03-01T00:00:00.000Z",
]
`;

exports[`getOccurrecesRelevantForMonth should parse cron expressions correctly for case Edges in UTC with 0 23 31 * * 1`] = `
[
  "2025-03-31T23:00:00.000Z",
]
`;

exports[`getOccurrecesRelevantForMonth should parse cron expressions correctly for case Edges in UTC with 59 23 31 * * 1`] = `
[
  "2025-03-31T23:59:00.000Z",
]
`;

exports[`getOccurrecesRelevantForMonth should parse cron expressions correctly for case Inter month in UTC with 0 0 1 * * 1`] = `
[
  "2025-02-01T00:00:00.000Z",
  "2025-03-01T00:00:00.000Z",
]
`;
